--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,5 +25,5 @@ jobs:
 
       - name: Run tests
         env:
-            PYTHONPATH: ./coba
+          PYTHONPATH: .
         run: pytest coba/tests/
