--- a/backend/data/tasks.json
+++ b/backend/data/tasks.json
@@ -46,5 +46,17 @@
     "title": "kimia",
     "done": true,
     "pushover": true
+  },
+  {
+    "id": 1744082701779,
+    "title": "ipa",
+    "done": false,
+    "pushover": true
+  },
+  {
+    "id": 0,
+    "title": "cloud",
+    "done": false,
+    "pushover": true
   }
 ]
