--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -19,7 +19,7 @@ jobs:
         python-version: '3.10'
 
     - name: Install dependencies
-      run: pip install -r coba/requirements.txt
+      run: pip install -r ./coba/requirements.txt
 
     - name: Init database (create tables)
       run: python coba/backend/init_db.py
