--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -20,6 +20,9 @@ jobs:
 
     - name: Install dependencies
       run: pip install -r requirements.txt
+      
+    - name: List isi folder backend
+      run: ls -la backend
 
     - name: Init database (create tables)
       run: python backend/init_db.py
