--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -6,10 +6,10 @@ on:
   pull_request:
     branches: [ main ]
   schedule:
-    - cron: '*/15 * * * *'
+    - cron: '*/2 * * * *'
 
 jobs:
-  kirim-notifikasi:
+  notifikasi-dan-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -22,9 +22,12 @@ jobs:
         python-version: '3.10'
 
     - name: Install dependencies
-      run: pip install -r requirements.txt
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install pytest
 
-    - name: List isi folder backend
+    - name: List isi folder backend (debug)
       run: ls -la backend
 
     - name: Init database (create tables)
@@ -33,3 +36,5 @@ jobs:
     - name: Jalankan pengecekan deadline
       run: PYTHONPATH=. python backend/cek_deadline.py
 
+    - name: Jalankan test API dengan pytest
+      run: PYTHONPATH=. pytest tests/
