--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ main ]
   schedule:
-    - cron: '*/2 * * * *'
+    - cron: '0 * * * *'
 
 jobs:
   notifikasi-dan-test:
